k8s/namespace.yaml
# cluster에 namespace 정의
apiVersion: v1
kind: Namespace
metadata:
  name: waterandfish
