k8s/deployment.yaml
# 배포 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waterandfish-fe
  namespace: waterandfish
  labels:
    app: waterandfish-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: waterandfish-fe
  template:
    metadata:
      labels:
        app: waterandfish-fe
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: frontend
          image: registry-waterandfish.kr.ncr.ntruss.com/waterandfish-fe:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: nginx-conf
          configMap:
            name: waterandfish-fe-nginx-conf
